# CppCode

./: .gitignore  README.org  example_code_style.hpp
Libs/: README.org
Libs/BenchMark/: CMakeLists.txt
Libs/BenchMark/include/: timer.hpp
Libs/BenchMark/src/: CMakeLists.txt  main.cpp  timer.cpp
Practice/CodeAbbey/0001/: CMakeLists.txt  README.org
Practice/CodeAbbey/0001/src/: main.cpp
Practice/CodeAbbey/0002/: CMakeLists.txt  README.org
Practice/CodeAbbey/0003/: CMakeLists.txt  README.org
Practice/CodeAbbey/0004/: CMakeLists.txt  README.org
Practice/CodeForces/: 1016.cpp  112A.cpp  116A.cpp  118A.cpp  1201A.cpp  122A.cpp  133A.cpp  1368A.cpp  1369A.cpp  1372A.cpp  1373A.cpp  1373B.cpp  1374A.cpp  1374B.cpp  1374C.cpp  1385A.cpp  152A.cpp  158A.cpp  1A.cpp  231A.cpp  236A.cpp  263A.cpp  266A.cpp  281A.cpp  282A.cpp  339A.cpp  427B.cpp  4A.cpp  50A.cpp  535A.cpp  546A.cpp  581B.cpp  58A.cpp  69A.cpp  71A.cpp  791A.cpp  805B.cpp  810A.cpp  903A.cpp  96A.cpp  (+3 more)
Practice/CodeForces/Descriptions/: 1A.org  231A.org  4A.org  71A.org
Practice/DailyProgrammer/Easy/: CMakeLists.txt
Practice/DailyProgrammer/Weekly/: CMakeLists.txt
Resources/: README.org
Resources/sockets/client/: CMakeLists.txt
Resources/sockets/server/: CMakeLists.txt
Resources/sockets/server/src/: Application.cpp  CMakeLists.txt  Client.cpp  Conection.cpp  main.cpp
Resources/x11/: x11_1.c  x11_cairo.c
Resources/x11/xlib++/: Makefile  example5.cpp
Snippets/: lowercase.cpp  random.cpp
Tutorial/001-Structure_of_a_Cpp_Program/: CMakeLists.txt  README.org
Tutorials/: README.org
(+33 files in other folders)
